@@ -1,3 +1,9 @@
+2004-12-11  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-item.c (gnome_wp_item_update_description):
+	Fix the ngettext calling bit to actually work, and move the %d into
+	the format string for g_strdup_print, so we don't say "%d pixels"
+
 2004-12-10  Rodney Dawes  <dobey@novell.com>
 
 	* gnome-wp-item.c (gnome_wp_item_update_description):
